# YTaxiPlot

./: CMakeLists.txt  Plot.hpp  README.md  details.cpp  details.hpp  graph.cpp  main.cpp  plot.cpp
Interfsaces/: RenderObject.hpp
Primitives/: Canvas.hpp  Point.hpp  Rect.hpp
RenderObjects/: ProgressBar.hpp  Text.hpp
RenderObjects/Plot/: Plot.hpp  PlotLine.hpp
